# local_projects

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  constants.ts  styles.css
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  README.md  errors.txt  git_open.sh  index.json  lp.config.json  tauri.conf.json
src-tauri/src/: config.rs  file_handler.rs  index.rs  indexer.rs  lexer.rs  main.rs  search.rs  search_model.rs
src-tauri/src/dir_walker/: errors.rs  mod.rs  walker.rs
src-tauri/src/errors/: config_error.rs  lp_error.rs  mod.rs
src/helpers/: html.helper.ts  icon.helper.ts  lang-color.helper.ts  time-ago.helper.ts
src/lib/: ConfigView.svelte  DocView.svelte  Header.svelte  LanguageLegend.svelte  Languages.svelte  Project.svelte  ProjectsView.svelte  SearchBar.svelte  Sidebar.svelte
src/lib/explorer/: ExplorerView.svelte
src/md-parser/: markdown_parser.d.ts  markdown_parser_bg.js  markdown_parser_bg.wasm  markdown_parser_bg.wasm.d.ts  package.json
src/stores/: AppContext.ts
src/types/: index.ts
